manifests/openshift/scraper/deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: scraper
  labels:
    run: scraper
spec:
  replicas: 1
  selector:
    run: scraper
  template:
    metadata:
      labels:
        run: scraper
    spec:
      containers:
        - name: scraper
          image: image-registry.openshift-image-registry.svc:5000/personal-playground/scraper:latest
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - scraper
        from:
          kind: ImageStreamTag
          name: 'scraper:latest'
