manifests/openshift/scraper/service-os.yaml
##---
# Source: skillhub/templates/service-os.yaml


apiVersion: v1
kind: Service

metadata:
    name: scraper
    labels:
        app: skillhub
        run: scraper

spec:
    type: NodePort
    selector:
        run: scraper
    ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
